# superlu_dist

./: .ci_tests.sh  .ci_tests_gpu.sh  .gitignore  .gitlab-ci.yml  .travis.yml  .travis_tests.sh  CMakeLists.txt  CMakeLists.txt.orig  Dockerfile  DoxyConfig  Doxygen_Config.txt  Makefile  Nan_link_need_fix  README  README-for-summit  README.md  a.out  batch_summit_1cpu1gpu.sh  buildme  buildme_igpu.sh  buildme_igpu_v1.sh  buildme_igpu_v2.sh  buildme_igpu_v2_int32.sh  cmake_thimble.sh  config.sh  config_cleanlinux.sh  config_hpctoolkit.sh  cp_new  make.inc  make.inc.in  make.inc_good_dynamic  make.inc_good_static  make.inc_knl  make.inc_tmp  run_cmake_build.bash  run_cmake_build.csh  run_cmake_build.sh  run_cmake_jlse.sh  run_cmake_summit.sh  run_xsli_build.sh  (+4 more)
CBLAS/: CMakeLists.txt  Cnames.h  Makefile  caxpy.c  cgemv.c  cgerc.c  cgeru.c  chemv.c  cher2.c  ctrsv.c  dgemm.c  dgemv.c  dger.c  dsymv.c  dsyr2.c  dtrsm.c  dtrsv.c  f2c.h  input_error_dist.c  sgemm.c  sgemv.c  sger.c  ssymv.c  ssyr2.c  strsm.c  strsv.c  z_internal.c  zgemm.c  zgemv.c  zgerc.c  zgeru.c  zhemv.c  zher2.c  ztrsm.c  ztrsv.c
EXAMPLE/: CMakeLists.txt  Makefile  README  README.onesided  batch_summit_1cpu1gpu.sh  dcreate_matrix.c  dcreate_matrix3d.c  dcreate_matrix_perturbed.c  dnrformat_loc3d.c  dreadhb.c  dreadtriple.c  dscatter.c.bak  g10.cua  g4.cua  g4.postorder.eps  g4.rua  pddrive.c  pddrive.py  pddrive1.c  pddrive1_ABglobal.c  pddrive2.c  pddrive2_ABglobal.c  pddrive3.c  pddrive3_ABglobal.c  pddrive3d.c  pddrive3d1.c  pddrive3d2.c  pddrive3d3.c  pddrive3d_block_diag.c  pddrive3d_vbatch.c  pddrive4.c  pddrive4_ABglobal.c  pddrive_ABglobal.c  pddrive_spawn.c  pdgssvx.c  pdgstrf2.c  pdgstrf_X1.c  pdgstrf_irecv.c  pdgstrs_lsum_X1.c  psdrive.c  (+62 more)
EXAMPLE/bak/: pxdrive.c.base.bak
FORTRAN/: CMakeLists.txt  Makefile  README  c2f_dcreate_matrix_x_b.c  c2f_zcreate_matrix_x_b.c  c_fortran_pdgssvx_ABglobal.c  c_fortran_slugrid.c  dcreate_dist_matrix.c  f_5x5.F90  f_5x5.f90  f_pddrive.F90  f_pddrive.f90  f_pddrive3d.F90  f_pddrive3d.f90  f_pddrive_ABglobal.f  f_pddrive_old.f90  f_psdrive.F90  f_pzdrive.F90  f_pzdrive.F90.old  f_pzdrive.f90  f_pzdrive3d.F90  f_pzdrive3d.f90  make.out  sp_ienv.c  superlu_c2f_dwrap.c  superlu_c2f_wrap.c  superlu_c2f_zwrap.c  superlu_dist_config.fh  superlu_mod.f90  superlupara.f90  zcreate_dist_matrix.c  zhbcode1.f90
PYTHON/: CMakeLists.txt  GP_demo.py  README  pdbridge.c  pdbridge.h  pdbridge.py  pddrive.py  pddrive_master.py  pddrive_worker.py
SRC/: 1  AWPM_CombBLAS.h  AWPM_CombBLAS.hpp  CMakeLists.txt  Cnames.h  GetDiagU.c  LBCworks.pdgstrs.c  Makefile  TreeBcast_slu.hpp  TreeBcast_slu_impl.hpp  TreeBcast_v2.hpp  TreeBcast_v2_impl.c  TreeBcast_v2_impl.cpp  TreeBcast_v2_impl.hpp  TreeInterface.cpp  TreeInterface.cu  TreeReduce_slu.hpp  TreeReduce_slu_impl.hpp  TreeReduce_v2.hpp  TreeReduce_v2_impl.cpp  TreeReduce_v2_impl.hpp  acc_aux.c  acc_aux.h  asyncomm.hpp  backup_coding  bak.pdgstrs.c  bak.pdgstrs_lsum.c  bcbufferok.pdgstrs.c  blas.cpp  blas.hpp  bothbufferok.print.pdgstrs.c  c2cpp_GetAWPM.cpp  cholnzcnt.c  cholnzcnt.h  comm_tree.c  communication_aux.c  cublas_utils.c  cublas_utils.h  d3DPartition.c  dHWPM_CombBLAS.hpp  (+331 more)
SRC/CplusplusFactor/: LUgpuCHandle_interface_impl.cpp  LUgpuCHandle_interface_impl.cu  anc25d-GPU_impl.hpp  anc25d.hpp  anc25d_impl.hpp  batch_block_copy.cu  batch_block_copy.h  batch_factorize.cu  batch_factorize.h  batch_factorize_marshall.h  batch_wrappers.h  cublas_cusolver_wrappers.hpp  dAncestorFactor_impl.hpp  dsparseTreeFactorGPU.cpp  dsparseTreeFactorGPU_impl.hpp  dsparseTreeFactor_upacked_impl.hpp  gpuCommon.hpp  l_panels_impl.hpp  luAuxStructTemplated.hpp  lupanels.cpp  lupanels.hpp  lupanelsComm3dGPU_impl.hpp  lupanels_GPU.cpp  lupanels_GPU.cuh  lupanels_GPU_impl.hpp  lupanels_comm3d_impl.hpp  lupanels_impl.hpp  pdgstrf3d_upacked.cpp  pdgstrf3d_upacked_impl.hpp  schurCompUpdate.cu  schurCompUpdate_impl.cuh  sparseTreeFactor_impl.hpp  superlu_blas.hpp  u_panels_impl.hpp  xgstrf2.hpp  xlupanels.hpp  xlupanels_GPU.cuh
SRC/TRF3dV100/: LUgpuCHandle_interface.cpp  LUgpuCHandle_interface_impl.cpp  LUgpuCHandle_interface_impl.cu  anc25d-GPU.cpp  anc25d-GPU_impl.hpp  anc25d.cpp  anc25d.hpp  anc25d_impl.hpp  batch_block_copy.cu  batch_block_copy.h  batch_factorize.cu  batch_factorize.h  batch_factorize_marshall.h  commWrapper.cpp  commWrapper.hpp  cublas_cusolver_wrappers.hpp  dAncestorFactor.cpp  dAncestorFactor_impl.hpp  dsparseTreeFactorGPU.cpp  dsparseTreeFactorGPU_impl.hpp  dsparseTreeFactor_summit.cpp  dsparseTreeFactor_summit_impl.hpp  l_panels.cpp  l_panels_impl.hpp  luAuxStructTemplated.hpp  lu_common.hpp  lupanels.cpp  lupanels.hpp  lupanelsComm3dGPU.cpp  lupanelsComm3dGPU_impl.hpp  lupanels_GPU.cpp  lupanels_GPU.cuh  lupanels_GPU_impl.hpp  lupanels_comm3d.cpp  lupanels_comm3d_impl.hpp  lupanels_impl.hpp  pdgstrf3d_summit.cpp  pdgstrf3d_summit_impl.hpp  pdgstrf3d_upacked.cpp  pdgstrf3d_upacked_impl.hpp  (+10 more)
SRC/complex16/: dcomplex_dist.c  pz3dcomm.c  pzdistribute-aux3d.c  pzdistribute.c  pzdistribute3d.c  pzgsequ.c  pzgsmv.c  pzgsmv_AXglobal.c  pzgsrfs.c  pzgsrfs_ABXglobal.c  pzgssvx.c  pzgssvx3d.c  pzgssvx3d_csc_batch.c  pzgssvx_ABglobal.c  pzgstrf.c  pzgstrf2.c  pzgstrf3d.c  pzgstrf_irecv.c  pzgstrs.c  pzgstrs1.c  pzgstrs3d.c  pzgstrs_Bglobal.c  pzgstrs_lsum.c  pzsymbfact_distdata.c  pzutil.c  z3DPartition.c  zHWPM_CombBLAS.hpp  zSchCompUdt-2Ddynamic.c  zSchCompUdt-gpu.c  z_c2cpp_GetHWPM.cpp  zbinary_io.c  zcommunication_aux.c  zdistribute.c  zequil_batch.c  zgather.c  zgsequ_dist.c  zlangs_dist.c  zlaqgs_dist.c  zldperm_dist.c  zlook_ahead_update.c  (+21 more)
SRC/cuda/: dsuperlu_gpu.cu  pdgstrs_lsum_cuda.cu  pdgstrs_perm_cuda.cu  psgstrs_lsum_cuda.cu  psgstrs_perm_cuda.cu  pzgstrs_lsum_cuda.cu  pzgstrs_perm_cuda.cu  ssuperlu_gpu.cu  superlu_gpu.cu  superlu_gpu_utils.cu  zsuperlu_gpu.cu
SRC/double/: d3DPartition.c  dHWPM_CombBLAS.hpp  dSchCompUdt-2Ddynamic.c  dSchCompUdt-gpu.c  dSchCompUdt-gpuOffload-alt.c  (+67 more)
TEST/: CMakeLists.txt  Makefile  README  pdcompute_resid.c  pdtest.c  pdtest.sh  pstest.c  pzcompute_resid.c  pztest.c  pztest.sh  runtest.cmake
(+4703 files in other folders)
